--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
+    "history": "^4.10.1",
+    "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
