--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
+    "google-maps-react": "^2.0.2",
     "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-geocode": "^0.2.1",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "recompose": "^0.30.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
