--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.2",
     "polished": "^3.4.2",
     "react": "^16.11.0",
