--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/frontend/src/pages/Map/index.js
 /frontend/node_modules
 /backend/node_modules
 /.pnp
@@ -22,6 +23,7 @@ desafio-unicad.docx
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -30,4 +32,3 @@ desafio-unicad.docx
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-frontend/src/pages/Map/index.js
