PropTypes Validation and final fixs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,14 @@
     "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
-    "dotenv": "^8.2.0",
     "polished": "^3.4.2",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-geocode": "^0.2.1",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "recompose": "^0.30.0",
     "styled-components": "^4.4.1",
     "yup": "^0.27.0"
   },
