--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@datepicker-react/styled": "^2.1.4",
     "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-datepicker": "^2.10.0",
     "react-dom": "^16.11.0",
     "react-geocode": "^0.2.1",
     "react-google-maps": "^9.4.5",
